style.css
* {
    font-family: Arial, Helvetica, sans-serif;
}

body {
    margin: 0;
}

.one,
.two,
.three,
.four {
    min-height: 200px;
    max-height: 1000px;
}

.one {
    background-color: darkred;
}

.header {
    display: flex;
    justify-content: space-between;
    align-items: center;
    padding: 0 8px;
}

a {
    text-decoration: none;
    color: #F9FAF8;
}

.left {
    font-size: 24px;
    color: #F9FAF8;
}

.right {
    display: flex;
    gap: 1rem;
    list-style-type: none;
    justify-content: space-between;
    padding-left: 1rem;
    padding-right: 1rem;
}  

.hero {
    display: flex;
    color: #E5E7EB;
    padding: 5rem;
    gap: 2rem;
}

.hero1 {
    display: flex;
    flex-direction: column;
    font-size: 18px;
    gap: 1rem;
}

.herotitle {
    font-size: 48px;
    font-weight: bolder;
}

button {
    background-color: rgb(49, 7, 7);
    color: #E5E7EB;
    width: 120px;
    height: 40px;
    border-radius: 12px;
    font-size: 16px;
    font-weight: 600;
    border: solid;
}

.burrows {
    display: flex;
    min-width: 0;
    min-height: 0;
    max-height: 200px;
    max-width: 600px;
    width: 100%;
    height: auto;
    object-fit: cover;
}


.two {
    display: flex;
    flex-direction: column;
    background-color: rgb(82, 18, 18);
    padding: 1rem 5rem;
}

.header2 {
    font-size: 36px;
    font-weight: 900;
    color:#E5E7EB;
    display: flex;
    justify-content: center;
    align-items: center;
    padding: 1rem
}

.info {
    display: flex;
    flex-direction: row;
    justify-content: center;
    align-items: center;
    gap: 52px; 
    color:#E5E7EB;
    padding: 1rem 5rem;
}
  
.goblin {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    width: 150px;
    gap: 16px;
}
  
.text {
    text-align: center;
}
  
img {
    width: 150px;
    height: 150px;
    border-radius: 32px;
}

.three {
    display: flex;
    flex-direction: column;
    background-color: rgb(131, 126, 126);
    padding: 1rem 5rem;
    justify-content: center;
    align-items: center;
}

.quote {
    font-size: 36px;
    font-weight: 100;
    font-style: italic;
}

.author {
    font-size: 24px;
    font-weight: 800;
    margin: 0 0 0 auto;
}

.four {
    background-color: rgb(97, 12, 12);
    padding: 1rem 20rem;
    display: flex;
    justify-content: center;
    align-items: center;
}

.container {
    display: flex;
    justify-content: space-between;
    align-items: center;
    min-height: 100px;
    min-width: 400px;
    flex: 1 1 auto;
    background-color: rgb(49, 7, 7);;
    padding: 1rem 3rem;
    color: #E5E7EB;
    border-radius: 8px;
}

.fourtitle {
    font-weight: bolder;
    font-size: 24px;
}

.footer {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    background-color: rgb(0, 0, 0);
    padding: 8px;
    color: white;
}

